--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Team-IC/Pro-Bot#readme",
   "dependencies": {
+    "@discordjs/builders": "^0.11.0",
     "discord.js": "^13.6.0"
   },
   "devDependencies": {
